Update swagger docs and add additional tests
